--- a/dz_chast_2/style_for_dz/style_dz1.css
+++ b/dz_chast_2/style_for_dz/style_dz1.css
@@ -1,17 +1,7 @@
-li {
-   list-style: none;
-   width: 175px;
-}
-
-ul li{
-    margin: 10px;
-}
-
-li:hover{
-    color:white;
-    background-color: rgb(232, 61, 61);
-}
-
-a{
-    text-decoration: none;
+.block{
+    display: flex;
+    width: 30%;
+    height: 30vh;
+    border: 1px solid black;
+    margin: 10px auto;
 }
