--- a/style/style_in.css
+++ b/style/style_in.css
@@ -1,4 +1,4 @@
-header, footer{
+header{
     border: 3px solid  rgb(168, 0, 11);
     background-color: rgb(168, 0, 11);
     display: flex;
@@ -9,9 +9,6 @@ header, footer{
     justify-content: space-between;
 }
 
-footer{
-    
-}
 
 nav a {
     background-color: #000d3d;
@@ -62,4 +59,7 @@ ul{
 h1{
     margin: 10px;
     color: brown ;
+}
+h2{
+    color: #c31700;
 }
